fix-gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,7 @@ ul {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  gap: 24px;
+  gap: 16px;
 }
 
 .bellow-soc-item {
